--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -1,7 +1,10 @@
-<%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<c:set var="contextPath" value="${pageContext.request.contextPath}"/>
+<%--
+  Created by IntelliJ IDEA.
+  User: aarka
+  Date: 10/2/2019
+  Time: 1:24 AM
+  To change this template use File | Settings | File Templates.
+--%>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">AT Java Web</a>
@@ -20,7 +23,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/alunos">Alunos</a>
-                    <a class="dropdown-item" href="#">Professores</a>
+                    <a class="dropdown-item" href="/professor">Professores</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#/curso">Curso</a>
                     <a class="dropdown-item" href="#">Disciplina</a>
