--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -25,7 +25,7 @@
                     <a class="dropdown-item" href="/alunos">Alunos</a>
                     <a class="dropdown-item" href="/professor">Professores</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#/curso">Curso</a>
+                    <a class="dropdown-item" href="/curso">Curso</a>
                     <a class="dropdown-item" href="/disciplina">Disciplina</a>
                     <a class="dropdown-item" href="#">Turma</a>
                     <div class="dropdown-divider"></div>
