TURMA - instanciação de objetos DONE

--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -27,7 +27,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/curso">Curso</a>
                     <a class="dropdown-item" href="/disciplina">Disciplina</a>
-                    <a class="dropdown-item" href="#">Turma</a>
+                    <a class="dropdown-item" href="/turma">Turma</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Perfil</a>
                 </div>
