--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -25,11 +25,12 @@
                     <a class="dropdown-item" href="/alunos">Alunos</a>
                     <a class="dropdown-item" href="/professor">Professores</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/curso">Curso</a>
-                    <a class="dropdown-item" href="/disciplina">Disciplina</a>
-                    <a class="dropdown-item" href="/turma">Turma</a>
+                    <a class="dropdown-item" href="/curso">Cursos</a>
+                    <a class="dropdown-item" href="/disciplina">Disciplinas</a>
+                    <a class="dropdown-item" href="/turma">Turmas</a>
+                    <a class="dropdown-item" href="#">Notas</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Perfil</a>
+                    <a class="dropdown-item" href="#">Tipos de Perfis</a>
                 </div>
             </li>
              <li class="nav-item dropdown">
