--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -28,9 +28,9 @@
                     <a class="dropdown-item" href="/curso">Cursos</a>
                     <a class="dropdown-item" href="/disciplina">Disciplinas</a>
                     <a class="dropdown-item" href="/turma">Turmas</a>
-                    <a class="dropdown-item" href="#">Notas</a>
+                    <a class="dropdown-item text-danger" href="#">Notas</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Tipos de Perfis</a>
+                    <a class="dropdown-item text-danger" href="#">Tipos de Perfis</a>
                 </div>
             </li>
              <li class="nav-item dropdown">
@@ -38,14 +38,14 @@
                     Editar
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/alunos">Alunos</a>
+                    <a class="dropdown-item" href="#">Alunos</a>
                     <a class="dropdown-item" href="#">Professores</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item disabled" href="#" aria-disabled="true">Curso</a>
-                    <a class="dropdown-item disabled" href="#" aria-disabled="true">Disciplina</a>
-                    <a class="dropdown-item disabled" href="#" aria-disabled="true">Turma</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Curso</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Disciplina</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Turma</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item disabled" href="#" aria-disabled="true">Perfil</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Perfil</a>
                 </div>
             </li>           
         </ul>
