--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -28,7 +28,7 @@
                     <a class="dropdown-item" href="/curso">Cursos</a>
                     <a class="dropdown-item" href="/disciplina">Disciplinas</a>
                     <a class="dropdown-item" href="/turma">Turmas</a>
-                    <a class="dropdown-item text-danger" href="#">Notas</a>
+                    <a class="dropdown-item text-danger" href="/nota">Notas</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="#">Tipos de Perfis</a>
                 </div>
