--- a/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
+++ b/University/dr4-java-web/dr4-at/src/main/webapp/WEB-INF/jsp/shared/navbar.jspf
@@ -22,7 +22,7 @@
                     Listagem
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/alunos">Alunos</a>
+                    <a class="dropdown-item" href="/aluno">Alunos</a>
                     <a class="dropdown-item" href="/professor">Professores</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/curso">Cursos</a>
@@ -33,13 +33,28 @@
                     <a class="dropdown-item text-danger" href="#">Tipos de Perfis</a>
                 </div>
             </li>
-             <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Editar
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Alunos</a>
-                    <a class="dropdown-item" href="#">Professores</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Professores</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Curso</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Disciplina</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Turma</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Perfil</a>
+                </div>
+            </li>    
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Criar
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/aluno/create">Alunos</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Professores</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Curso</a>
                     <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Disciplina</a>
@@ -48,6 +63,21 @@
                     <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Perfil</a>
                 </div>
             </li>           
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Excluir
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Alunos</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Professores</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Curso</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Disciplina</a>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Turma</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item disabled text-muted" href="#" aria-disabled="true">Perfil</a>
+                </div>
+            </li>    
         </ul>
         <form class="form-inline my-2 my-lg-0">                                    
             <a href="/logout" class="btn btn-outline-success my-2 my-sm-0" role="button" aria-pressed="true">Logout</a>
